Add AES Encryption Algorithm

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,7 @@ spring.jpa.show-sql=false
 server.port=8081
 
 spring.jpa.hibernate.ddl-auto=update
+
+# Encryption/Decryption Algorithm (AES)
+encryption.algorithm=AES
+encryption.key=5jtw8fK+okri5OtVunfwTA==
